force-app/main/default/objects/Topic__c/Topic__c.object-meta.xml
<CustomObject>
    <label>Topic</label>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>