force-app/main/default/objects/Topic__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <label>Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
                <default>true</default>
                <label>Platform</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>