force-app/main/default/objects/Topic__c/fields/Key_Words__c.field-meta.xml
<CustomField>
    <fullName>Key_Words__c</fullName>
    <inlineHelpText>Enter key words / tags to assist in search</inlineHelpText>
    <label>Key Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>