force-app/main/default/objects/Topic__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Feature</fullName>
                <default>true</default>
                <label>Salesforce Feature</label>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Research Topic</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>