force-app/main/default/objects/Topic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cloud__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Key_Words__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>